force-app/main/default/objects/Lead/fields/Lead_Rating__c.field-meta.xml
<CustomField>
    <fullName>Lead_Rating__c</fullName>
    <formula>IF( TEXT(lead_priority__c) =&apos;High&apos;, &apos;5 *&apos;,IF(TEXT( lead_priority__c )=&apos;Medium&apos;,&apos;3*&apos;,&apos;1*&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Rating</label>
    <type>Text</type>
</CustomField>