force-app/main/default/objects/Lead/fields/Lead_Status_Age__c.field-meta.xml
<CustomField>
    <fullName>Lead_Status_Age__c</fullName>
    <formula>TODAY()-   DATEVALUE(LastModifiedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Status Age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>