force-app/main/default/objects/Lead/validationRules/Ensure_Email_and_Phone_are_filled_before.validationRule-meta.xml
<ValidationRule>
    <fullName>Ensure_Email_and_Phone_are_filled_before</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
   IsConverted,
   OR(
      ISBLANK(Email),
      ISBLANK(Phone)
   )
)</errorConditionFormula>
    <errorMessage>Ensure Email and Phone are filled before conversion</errorMessage>
</ValidationRule>