force-app/main/default/objects/Lead/validationRules/Prevent_lead_conversion.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_lead_conversion</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    IsConverted,
     NOT( ISPICKVAL( Status , &apos;Qualified&apos;) ) 
    
    
)</errorConditionFormula>
    <errorMessage>Prevent lead conversion if Qualification Status ≠ Qualified</errorMessage>
</ValidationRule>