force-app/main/default/objects/Lead/listViews/Sales_Manager_Lead.listView-meta.xml
<ListView>
    <fullName>Sales_Manager_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Sales Manager</label>
    <queue>Sales_Manager</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>